refactor: Manager, UI, End, Cherry, and ServiceLocator optimizations and enhancements
- Refactored GameManager and added LevelManager and PlayerManager.
- Refactored UI button logic to support the service locator and new managers.
- Modified End class to load new levels.
- Fixed Cherry class entrance judgment.
- Refactored ServiceLocator to be a static class and optimized registration and resolution logic.

--- a/Godot 4 2D Platformer Project.csproj
+++ b/Godot 4 2D Platformer Project.csproj
@@ -4,4 +4,10 @@
     <EnableDynamicLoading>true</EnableDynamicLoading>
     <RootNamespace>Godot42DPlatformerProject</RootNamespace>
   </PropertyGroup>
+  <ItemGroup>
+    <Compile Remove="scripts\Loader\**" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Remove="scripts\Loader\**" />
+  </ItemGroup>
 </Project>
